--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=0" />
     <title>Horloge Logwork — Europe/Paris</title>
   </head>
   <body>
     <!-- Widget horloge Logwork -->
     <script src="https://cdn.logwork.com/widget/text.js"></script>
-    <a href="https://logwork.com/clock-widget/" class="clock-widget-text" data-timezone="Europe/Paris" data-language="fr">---</a>
+<a href="https://logwork.com/clock-widget/" class="clock-widget-text" data-timezone="Europe/Paris" data-language="fr" data-textcolor="#000000" data-digitscolor="#000000">---</a>
   </body>
 </html>
